# django-freeradius

./: .gitignore  .jslintrc  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  heri.md  requirements-test.txt  requirements.txt  runcheckmigration  runflake8  runisort  runsphinx-build  runtests.py  setup.cfg  setup.py  sphinx-build
django_freeradius/: __init__.py  admin.py  apps.py  models.py  settings.py  tests.py  tests_admin.py  urls.py  utils.py  views.py
django_freeradius/api/: serializers.py  urls.py  views.py
django_freeradius/base/: admin.py  admin_actions.py  admin_filters.py  base.py  form.py  forms.py  models.py  validators.py
django_freeradius/migrations/: 0001_initial.py  0001_initial_freeradius.py  0001_initial_squashed.py  0002_add_customizations.py  0002_auto_20170603_1219.py  0002_auto_20170706_1326.py  0002_create_default_radius_profiles.py  0002_radiusaccounting_acct_update_time.py  0002_squashed.py  0003_auto_20170603_1345.py  0003_auto_20170706_1517.py  0003_auto_20170727_1613.py  0003_default_radius_groups.py  0004_auto_20170614_1916.py  0004_auto_20170711_1806.py  0004_auto_20170727_1635.py  0004_radiustoken.py  0005_add_radactt_fields.py  0005_auto_20170617_1816.py  0005_auto_20170726_1247.py  0005_radacct_fix_called_calling.py  0006_auto_20170617_2032.py  0006_auto_20170726_1509.py  0006_postauth_improvements.py  0007_auto_20170617_2140.py  0007_nas_improvements.py  0008_auto_20171004_1003.py  0009_radiuscheck_expires.py  (+14 more)
docs/: Makefile  make.bat
tests/: local_settings.example.py  radius  settings.py  urls.py
(+87 files in other folders)
