[flake8]
exclude = *.egg-info,.git,.settings,requirements,*migrations*,./tests/*settings*.py
max-line-length = 110

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
line_length = 110
skip = migrations
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django_freeradius
multi_line_output = 0
not_skip = __init__.py
















[bdist_wheel]
universal=1

set -e

[flake8]
exclude = migrations,./tests/*settings*.py
max-line-length = 110


[isort]
skip = migrations
check = only
