[flake8]
exclude = *.egg-info,
          .git,
          *migrations*,
          ./tests/*settings*.py,
          docs/*
max-line-length = 110
# W605: invalid escape sequence
ignore = W605

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
line_length = 109
skip = migrations, docs/source/conf.py
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django_freeradius
multi_line_output = 5
not_skip = __init__.py
